# SpotifyToYoutube

./: .dockerignore  .env  .env.example  .gitignore  BACKEND_SUMMARY.md  DOCKER_README.md  FRONTEND_PAGINATION_README.md  LICENSE  OAUTH_README.md  README.md  STARTUP_CONVERSION_README.md  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  setup.sh  start.sh  stop.sh
backend/: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  DATABASE_README.md  Dockerfile  LOGGING_README.md  README.md  api-collection.postman.json  go.mod  go.sum  main.go  main_test.go
backend/internal/config/: config.go
backend/internal/database/: neo4j.go
backend/internal/handlers/: auth.go  playlist.go  song.go
backend/internal/middleware/: middleware.go
backend/internal/models/: models.go
backend/internal/services/: playlist.go  spotify.go  youtube.go
backend/internal/utils/: utils.go
backend/src/: conversion_service.rs  database.rs  database_old.rs  logging.rs  main.rs  music_service.rs
backend/src/auth/: mod.rs
backend/src/spotify/: README.md  app_integration.rs  mod.rs  spotify_api.rs
backend/src/youtube/: README.md  app_integration.rs  mod.rs  youtube_api.rs
frontend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  FRONTEND_README.md  index.html  package-lock.json  test.html
frontend/src/: App.css  App.tsx  lib.rs  styles.css
frontend/src/components/: Dashboard.css  Dashboard.tsx  Header.css  Header.tsx  PlaylistImport.css  PlaylistImport.tsx  PlaylistView.css  PlaylistView.tsx  SongManager.css  SongManager.tsx  footer.rs  header.rs
frontend/src/pages/: add_tracks.rs  display_tracks.rs  home.rs  mod.rs  not_found.rs  playlists.rs
frontend/src/services/: api.rs  api.ts
