[package]
name = "SpotifyToYoutube_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
clap = { version = "4.5.4", features = ["derive", "env", "unicode", "wrap_help", "cargo"] }
fastrand = "2.0.2"
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.116"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "full"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
log = "0.4"
env_logger = "0.9"
log4rs = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
sqlx = "0.7.4"
sqlx-cli = "0.7.4"
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-middleware = "0.3.0"
reqwest-retry = "0.5.0"
jsonwebtoken = "9.3.0"
rand = "0.8"
rust-argon2 = "1.0"
paseto = "2.0"
chrono = "0.4.19"
tower-sessions = "0.12.2"
dotenv = "0.15"
actix-web = "4"
urlencoding = "2.1"