[package]
name = "SpotifyToYoutube_frontend"
version = "0.1.0"
edition = "2024"
authors = ["Nathan Moes <nathanmoes7@gmail.com>"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Request", "RequestInit", "RequestMode", "Response", "Headers", "HtmlInputElement", "SubmitEvent", "console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
anyhow = "1.0"
gloo-net = "0.2"
yew-router = "0.18"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = { version = "0.4", features = ["max_level_info"] }


[lib]
crate-type = ["cdylib", "rlib"]